some reformatting